# E-Paper-Emulator

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  demo.py  generate_cat_screenshots.py  pyproject.toml
.claude/: claude.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: claude.yml  python-package.yml  release.yml
epaper_emulator/: __init__.py  emulator.py
epaper_emulator/config/: epd2in13bc.json
epd_emulator/: __init__.py  epdemulator.py
epd_emulator/config/: epd2in13d.json
screenshots/: generate_cat_screenshots.py
tests/: test_config.py  test_epd.py
